Fixed it so that the boxes are aligned with the texts

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -317,6 +317,7 @@ tr .btn-success {
     margin: 0px 0px 0px 50px;
 }
 .createLobbyForm {
+    display: flex;
     order: 3;
     flex: 2;
 }
